# kafedra-resheto

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  Resheto.sln  Resheto.vcxproj  Resheto.vcxproj.filters  Solver.pro  cell.cpp  cell.h  graph.py  header.h  launch.txt  main.cpp  param.h  solver.cpp  solver.h
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cell.cpp  cell.h  cmake_install.cmake  graph.py  header.h  main.cpp  param.cpp  param.h  solver.cpp  solver.h  types.h
src/integral/: ci.cpp  ci.hpp  ci_impl.hpp
