set(MY_EXEC kafedra-resheto)
message(STATUS ${MY_EXEC})


message(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB MAIN_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB INTEGRAL_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/integral/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/integral/*.h)

MESSAGE(STATUS MAIN_SOURCE=${MAIN_SOURCE})
MESSAGE(STATUS INTEGRAL_SOURCE=${INTEGRAL_SOURCE})

add_executable(${MY_EXEC} ${MAIN_SOURCE} ${INTEGRAL_SOURCE})

# MPI
include_directories(${MPI_INCLUDE_PATH})
target_link_libraries(${MY_EXEC} ${MPI_LIBRARIES})

# Add a test:
enable_testing()
add_test(MPILaunchQuad ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${MY_EXEC})
